[project]
name = "json_file_helper"
version = "0.1.2"
description = "Classes for easier file usage, currently only json is implemented."
authors = [
    {name = "TheBiemGamer",email = "biemgamer@pm.me"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jsonschema (>=4.23.0,<5.0.0)"
]

[project.urls]
"Source Code" = "https://github.com/TheBiemGamer/JsonFileHelper"
Homepage = "https://github.com/TheBiemGamer/Json-File-Helper"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"
